{
    "name": "UserInput",
    "maps": [
        {
            "name": "Movement",
            "id": "34fd3a0d-dc3c-41d6-bb3e-26320e5980e3",
            "actions": [
                {
                    "name": "Moving",
                    "type": "Value",
                    "id": "d749cca5-bc29-4712-9475-31e8b231c102",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "438016b5-a728-4639-ab89-373afb911a82",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "2363b5fc-3873-4e1a-a93c-8c03a2e83b0d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Keyboard",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "904414b2-953d-4002-a0af-9f44e49c2f53",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Keyboard",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Cast",
            "id": "4d57938d-58d9-4ad9-96c4-6aa0e5564856",
            "actions": [
                {
                    "name": "CastSkillA",
                    "type": "Button",
                    "id": "5e42ab79-0731-42f9-a80a-75a9a68168c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CastSkillB",
                    "type": "Button",
                    "id": "400f9a6c-295e-42ba-abf8-5efc330f8325",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChosedSkill1",
                    "type": "Button",
                    "id": "efd5a075-9a3a-4fcd-81fd-b3b8a7476aa8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChosedSkill2",
                    "type": "Button",
                    "id": "0688e9bb-8ab4-4ced-a17d-7cb9d133f133",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChosedSkill3",
                    "type": "Button",
                    "id": "99b0a353-95d0-472c-af22-fd5646c6eec3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7aeb11b5-7090-4865-a7b9-fecced3e70e7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Keyboard",
                    "action": "CastSkillA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f53a8be-98c2-4bff-b209-c5f6c36d7bc3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Keyboard",
                    "action": "CastSkillB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34fe1131-e951-4282-88b6-c8973f81deab",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Keyboard",
                    "action": "ChosedSkill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93350457-bba7-4207-b35a-a4353aa8b74d",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Keyboard",
                    "action": "ChosedSkill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e873d6a-6049-44c9-9b53-98af54a77cca",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse Keyboard",
                    "action": "ChosedSkill3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse Keyboard",
            "bindingGroup": "Mouse Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}